@@ -28,7 +28,11 @@ The bindings will be installed into /usr/local by invoking `make install'.  If
 you wish to install them anywhere else then run make with the PREFIX variable
 set to another location. More fine grained control of the installation
 directories can be achieved using the BINDIR etc variables. For more detail
-read the Makefile.
+read the Makefile. DESTDIR can be used for packaging to install with the correct hierarchy into a temporary folder.
+
+NOTE: if you set PREFIX in `make install' you should also set it when invoking
+just `make'. PREFIX is to create the binary wrappers with the correct paths to
+the installed library.
 
 Documentation for the bindings can be built with `make doc' and installed with
 `make install-doc install-man', with the same provisos for installation paths.
